[package]
name = "mmproxy"
description = "Rust implementation of mmproxy (TCP + UDP)"
repository = "https://github.com/saiko-tech/mmproxy-rs"
version = "0.2.2"
edition = "2021"
license = "MIT"

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
argwerk = "0.20.1"
cidr = "0.2.1"
proxy-protocol = "0.5.0"
socket2 = "0.4.7"
libc = "0.2.138"
simple-eyre = "0.3.1"

[dependencies.tokio]
version = "1.23.0"
features = ["net", "rt-multi-thread", "macros", "io-util", "sync", "time"]
